Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16996

kfilnd: Wrong traffic class assigned

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      The wrong traffic class was being assigned to a transmit
      context when multiple networks were assigned to the same
      interface.

      This was discovered by noticing a currently unsupported
      traffic class didn't fail when it was used. The traffic
      class from the shared domain was being used instead.

      This was fixed by explicitly specifying the traffic
      class when creating a transmit context for an endpoint.

      Attachments

        Activity

          People

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: